--- a/src/VenueBundle/Resources/views/Default/venue.html.twig
+++ b/src/VenueBundle/Resources/views/Default/venue.html.twig
@@ -1,3 +1,5 @@
+<title>Cabinet of user </title>
 {% for userinfo in user %}
     <center><h1>Successfully logged in. Welcome, {{userinfo.name}} {{userinfo.surname}}</h1></center>
 {% endfor %}
+<center><a href ="{{path('logout')}}">Logout</a></center>
