edited smth info

--- a/src/VenueBundle/Resources/views/Default/venue.html.twig
+++ b/src/VenueBundle/Resources/views/Default/venue.html.twig
@@ -53,7 +53,11 @@
 </div>
 </div>
 
-    {% if user is defined %}
+
+<div class="inner cover">
+    
+</div>
+    <!-----{% if user is defined %}
     {% for userinfo in user %}
 <div class="inner cover">
 <h1 class="cover-heading">You logged as {{userinfo.name}} {{userinfo.surname}}</h1>
@@ -61,7 +65,7 @@
 <p class="lead">
 <a href="#" class="btn btn-lg btn-default">Your profile</a>
 </p>
-</div>
+</div><!----->
     {% endfor %}
     {% endif %}
 
