--- a/src/VenueBundle/Resources/views/Default/venue.html.twig
+++ b/src/VenueBundle/Resources/views/Default/venue.html.twig
@@ -1,90 +1,65 @@
-
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<meta name="description" content="">
-<meta name="author" content="">
-<link rel="icon" href="../../favicon.ico">
-
-<title>Index Page</title>
-
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-<link rel="stylesheet" href="css/venue.css">
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
-<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
-</head>
-
-<body>
-
-<div class="site-wrapper">
-
-<div class="site-wrapper-inner">
-
-<div class="cover-container">
-
-<div class="masthead clearfix">
-<div class="inner">
-<h3 class="masthead-brand">Test projectX</h3>
-<nav>
-<ul class="nav masthead-nav">
-<li class="active"><a href="/">Home</a></li>
-{% if session_id is not defined%} 
-    <li><a href="/log">SignIn</a></li> 
-{% endif %}
-<li><a href="#">Features</a></li>
-<li><a href="#">Contact</a></li>
-{% if session_id is defined %}
-    <li><a href="/logout">Logout</a></li>
-{% endif %}
-</ul>
-</nav>
-</div>
-</div>
-
-    {% if user is defined %}
-    {% for userinfo in user %}
-<div class="inner cover">
-<h1 class="cover-heading">You logged as {{userinfo.name}} {{userinfo.surname}}</h1>
-<p class="lead">Welcome to your account. You cannot do something. Functions are unavailable right now.</p>
-<p class="lead">
-<a href="#" class="btn btn-lg btn-default">Your profile</a>
-</p>
-</div>
-    {% endfor %}
-    {% endif %}
-
-<div class="mastfoot">
-<div class="inner">
-<p>ProjectX located here <a href="https://github.com/EmbodyCode/projectx">ProjectX</a>, by <a href="https://vk.com/codegonnabe">@toxic</a>.</p>
-</div>
-</div>
-
-</div>
-
-</div>
-
-</div>
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-<script src="../../dist/js/bootstrap.min.js"></script>
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Ontourcloud.Venue – Minsk Arena</title> <!-- Вместо Минск-Арены - динамическое название -->
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/venuedev.css">
+  </head>
+  <body>
+    <header>
+      <a href="http://ontourcloud.com"><img src="images/logo_bottom.svg"></a>
+      <div class="title">Ontourcloud.Venue – Minsk Arena</div> <!-- Вместо Минск-Арены - динамическое название -->
+    </header>
+    <div id="map"></div>
+    <script>
+      function initMap() {
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 15,
+          center: {lat: 51.506352, lng: -0.122437},
+          disableDefaultUI: true
+        });
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8Sz7i19L1YPqtJ6_ArT2amfqwsFYdfSQ&signed_in=true&callback=initMap" async defer></script>
+    <div id="container">
+      <ul>
+        <li><a href="#">Dashboard</a></li>
+        <li><a href="#" class="li-selected">Basic information</a></li>
+        <li><a href="#">Technical specifications</a></li>
+        <li><a href="#">Honorarium policy</a></li>
+        <li><a href="#">The distribution of powers among the organizers</a></li>
+        <li><a href="#">Calendar</a></li>
+        <li><a href="/logout">Logout</a></li>
+      </ul>
+      <div id="content">
+        <div id="left-content">
+          <p style="padding-top: 0;">Short Title:</p><input type="text">
+          <p>Full Title:</p><input type="text">
+          <p>Local Title:</p><input type="text">
+          <p>Short Description:</p><input type="text">
+          <p>Full Description:</p><textarea></textarea>
+          <p>Local Description:</p><textarea></textarea>
+          <p>Capacity:</p><input>
+          <p>Max Capacity:</p><input>
+        </div>
+        <div id="right-content">
+          <p style="padding-top: 0;">Country:</p><input>
+          <p>City:</p><input>
+          <p>Address:</p><input>
+          <p>Post Code:</p>  <input>
+          <p>Latitude / Longitude:</p>
+          <input style="width: calc(100% / 2 - 22.5px); float: left">
+          <input style="width: calc(100% / 2 - 22.5px);">
+          <p>Contacts:</p><input>
+          <p>Main Type:</p><input>
+          <p>Additional Type:</p><input>
+          <p>External Resources:</p><input>
+          <p>Ticket Services:</p><input>
+        </div>
+      </div>
+      <button>SAVE</button>
+    </div>
+    <footer>© 2016 Touring App, LLC</footer>
+  </body>
 </html>
