--- a/src/VenueBundle/Resources/views/Default/denied.html.twig
+++ b/src/VenueBundle/Resources/views/Default/denied.html.twig
@@ -1,30 +1,3 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
-<!DOCTYPE HTML>
 <html>
-    <head>
-        <title>Access denied</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <div class="wrap">
-            <center><h1>OnTourCloud Venue</h1></center>
-            <div class="banner">
-                <img src="images/banner.png" alt="" />
-            </div>
-            <div class="page">
-                <h2>Dude, this page closed without authorization. Please, sign in!</h2>
-                <h2><a href='/log'>Sign in</a></h2>
-            </div>
-            <div class="footer">
-                <p>Design by <a href="http://w3layouts.com">w3layouts</a></p>
-            </div>
-        </div>
-    </body>
-</html>
+    <h2>Hello {{venueinfo}}</h2>
+</html
