--- a/src/VenueBundle/Resources/views/Default/venue.html.twig
+++ b/src/VenueBundle/Resources/views/Default/venue.html.twig
@@ -9,7 +9,7 @@
   <body>
     <header>
       <a href="http://ontourcloud.com"><img src="images/logo_bottom.svg"></a>
-      <div class="title">Ontourcloud.Venue – {{venueinfo}}</div> <!-- Вместо Минск-Арены - динамическое название -->
+      <div class="title">Ontourcloud.Venue – {{ShortTitle}}</div> <!-- Вместо Минск-Арены - динамическое название -->
       </header>
     <div id="map"></div>
     <script>
@@ -23,7 +23,6 @@
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8Sz7i19L1YPqtJ6_ArT2amfqwsFYdfSQ&signed_in=true&callback=initMap" async defer></script>
     <div id="container">
-        <form action="{{path('add')}}" method="POST">
       <ul>
         <li><a href="#">Dashboard</a></li>
         <li><a href="#" class="li-selected">Basic information</a></li>
@@ -35,27 +34,28 @@
       </ul>
       <div id="content">
         <div id="left-content">
-          <p style="padding-top: 0;">Short Title:</p><input type="text" name="short_title" required autofocus>
-          <p>Full Title:</p><input type="text" name="full_title" required autofocus/>
-          <p>Local Title:</p><input type="text" name="local_title" required autofocus/>
-          <p>Short Description:</p><input type="text" name="short_desc" required autofocus/>
-          <p>Full Description:</p><textarea name="full_desc" required autofocus></textarea>
-          <p>Local Description:</p><textarea name="local_desc" required autofocus></textarea>
-          <p>Capacity:</p><input name="capacity" required autofocus/>
-          <p>Max Capacity:</p><input name="max_capacity" required autofocus />
+            <form action="{{path('updateInfo')}}" method="POST">
+          <p style="padding-top: 0;">Short Title:</p><input type="text" name="short_title" value="{{ShortTitle}}" />
+          <p>Full Title:</p><input type="text" name="full_title" value="{{FullTitle}}" />
+          <p>Local Title:</p><input type="text" name="local_title" value="{{LocalTitle}}"/>
+          <p>Short Description:</p><input type="text" name="short_desc" value="{{ShortDesc}}" />
+          <p>Full Description:</p><textarea type="text" name="full_desc">{{FullDesc}}</textarea>
+          <p>Local Description:</p><textarea name="local_desc" type="text">{{LocalDesc}}</textarea>
+          <p>Capacity:</p><input name="capacity" type="number" value="{{Capacity}}" />
+          <p>Max Capacity:</p><input name="max_capacity" type="number" value="{{MaxCapacity}}" />
         </div>
         <div id="right-content">
-          <p style="padding-top: 0;">Country:</p><input name="country" required autofocus/>
-          <p>City:</p><input name="city" required autofocus/>
-          <p>Address:</p><input name="adress" required autofocus/>
-          <p>Post Code:</p>  <input name="postcode" required autofocus/>
+          <p style="padding-top: 0;">Country:</p><input name="country" type="text" value="{{Country}}" />
+          <p>City:</p><input name="city" type="text" value="{{City}}" />
+          <p>Address:</p><input name="adress" type="text" value="{{Adress}}" />
+          <p>Post Code:</p>  <input name="postcode" type="number" value="{{PostCode}}" />
           <p>Latitude / Longitude:</p>
-          <input name="latitude" required autofocus style="width: calc(100% / 2 - 22.5px); float: left"/>
-          <input name="longtitude" required autofocus style="width: calc(100% / 2 - 22.5px);"/>
-          <p>Contacts:</p><input name="contacts" required autofocus/>
-          <p>Main Type:</p><input name="maintype" required autofocus/>
-          <p>Additional Type:</p><input name="additional_type" required autofocus/>
-          <p>External Resources:</p><input name="external_resources" required autofocus/>
+          <input name="latitude" type="number" value="{{Latitude}}"  style="width: calc(100% / 2 - 22.5px); float: left"/>
+          <input name="longtitude" type="number" value="{{Longtitude}}"  style="width: calc(100% / 2 - 22.5px);"/>
+          <p>Contacts:</p><input name="contacts" type="text" value="{{Contacts}}" />
+          <p>Main Type:</p><input name="maintype" type="text" value="{{MainType}}" />
+          <p>Additional Type:</p><input name="additional_type" type="text" value="{{AdditionalType}}" />
+          <p>External Resources:</p><input name="external_resources" type="text" value="{{ExternalResources}}" />
           <p>Ticket Services:</p><input name="ticket_services">
         </div>
       </div>
