Updated admin controll panel

--- a/src/VenueBundle/Resources/views/Admin/registerPlatform.html.twig
+++ b/src/VenueBundle/Resources/views/Admin/registerPlatform.html.twig
@@ -5,7 +5,10 @@
             <input name="venuePassword" type="password" value="">
             <br>
             <h2>Reg as: </h2>
-            <input name="venueRole" type="text"/>
+            <select name="venueRole">
+                <option value="ROLE_ADMIN">Admin</option>
+                <option value="ROLE_USER">Platform</option>
+            </select>
             <input type="hidden" name="short_title" value=""/>
             <input type="hidden" name="full_title" value=""/>
             <input type="hidden" name="local_title" value=""/>
