--- a/src/VenueBundle/Resources/views/Default/venue.html.twig
+++ b/src/VenueBundle/Resources/views/Default/venue.html.twig
@@ -9,7 +9,7 @@
   <body>
     <header>
       <a href="http://ontourcloud.com"><img src="images/logo_bottom.svg"></a>
-      <div class="title">Ontourcloud.Venue – {{ShortTitle}}</div> <!-- Вместо Минск-Арены - динамическое название -->
+      <div class="title">Ontourcloud.Venue – {{FullTitle}}</div> <!-- Вместо Минск-Арены - динамическое название -->
       </header>
     <div id="map"></div>
     <script>
